View Issue Details

IDProjectCategoryView StatusLast Update
0023051CommunityOCCT:Modeling Algorithmspublic2012-04-10 10:19
ReporterabvAssigned Toabv 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0023051: Bug in BRepExtrema_DistShapeShape (through BRepExtrema_DistanceSS)
DescriptionThe problem is reported by Rob Bachrach on OCCT User's forum at http://www.opencascade.org/org/forum/thread_23040:

----------

When computing the distance between a face or edge and a vertex, with the vertex as the second argument, PointOnShape1 and PointOnShape2 results are switched.

 This seems to have been introduced in 6.5.1 and persists in 6.5.2. In 6.5.2, the lines 735 & 736 need to be changed from:
 const BRepExtrema_SolutionElem Sol1(Dstmin,P1,BRepExtrema_IsOnEdge,S1,t);
 const BRepExtrema_SolutionElem Sol2(Dstmin,Pt,BRepExtrema_IsVertex,S2);
 to
 const BRepExtrema_SolutionElem Sol1(Dstmin,Pt,BRepExtrema_IsOnEdge,S1,t);
 const BRepExtrema_SolutionElem Sol2(Dstmin,P1,BRepExtrema_IsVertex,S2);

 and lines 851 and 852 need to be changed from:
 const BRepExtrema_SolutionElem Sol1(Dstmin,P1,BRepExtrema_IsInFace,S1,U,V);
 const BRepExtrema_SolutionElem Sol2(Dstmin,Pt,BRepExtrema_IsVertex,S2);
 to
 const BRepExtrema_SolutionElem Sol1(Dstmin,Pt,BRepExtrema_IsInFace,S1,U,V);
 const BRepExtrema_SolutionElem Sol2(Dstmin,P1,BRepExtrema_IsVertex,S2);

-------

Note that the problem with edge has been fixed already in #22758, while the problem with face is still there
Steps To ReproduceSee attached script bug_distshape_fv.tcl
TagsNo tags attached.
Test case numberchl 934 X8

Attached Files

  • bug_distshape_fv.tcl (1,338 bytes)
  • X8 (1,559 bytes)

Activities

abv

2012-04-02 09:53

manager  

bug_distshape_fv.tcl (1,338 bytes)

abv

2012-04-02 13:09

manager   ~0020235

Fix integrated to branch CR23051; please test

apn

2012-04-02 17:07

administrator   ~0020239

Dear BugMaster,
     Workbench KAS:dev:apn-23051-occt was created from git branch CR23051 (and apn-23051-products from svn trunk) and compiled on Linux platform.
   
     There are not regressions in apn-23051-products regarding to KAS:dev:products-20120329-opt
  
     Test case for this fix is chl 934 X8. It's OK.
     
     See results in /QADisk/occttests/results/KAS/dev/apn-23051-products_02042012/lin
     See reference results in /QADisk/occttests/results/KAS/dev/products-20120329-opt_29032012/lin
     See test cases in /QADisk/occttests/tests/ED

apn

2012-04-02 17:08

administrator  

X8 (1,559 bytes)

Related Changesets

occt: master 46def2b5

2012-04-02 08:55:25

abv


Committer: abv Details Diff
0023051: Bug in BRepExtrema_DistShapeShape (through BRepExtrema_DistanceSS)

Fixed problem of returning swapped solution points for extrema between face and vertex.
Affected Issues
0023051
mod - src/BRepExtrema/BRepExtrema_DistanceSS.cxx Diff File

Issue History

Date Modified Username Field Change
2012-04-02 09:53 abv New Issue
2012-04-02 09:53 abv Assigned To => abv
2012-04-02 09:53 abv File Added: bug_distshape_fv.tcl
2012-04-02 13:07 abv Status new => resolved
2012-04-02 13:09 abv Note Added: 0020235
2012-04-02 13:09 abv Status resolved => reviewed
2012-04-02 13:45 apn Test case number => chl 934 X8
2012-04-02 14:35 mkv Assigned To abv => apn
2012-04-02 17:07 apn Note Added: 0020239
2012-04-02 17:08 apn File Added: X8
2012-04-02 17:08 apn Assigned To apn => bugmaster
2012-04-02 17:08 apn Status reviewed => tested
2012-04-10 10:18 abv Changeset attached => occt master 46def2b5
2012-04-10 10:19 abv Assigned To bugmaster => abv
2012-04-10 10:19 abv Status tested => verified
2012-04-10 10:19 abv Resolution open => fixed