0023051: Bug in BRepExtrema_DistShapeShape (through BRepExtrema_DistanceSS)

Fixed problem of returning swapped solution points for extrema between face and vertex.